--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -128,29 +128,14 @@
             <!-- MIT license -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.4</version>
+            <version>1.7.25</version>
         </dependency>
-
 
         <dependency>
             <!-- license: Apache 2 -->
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>14.0.1</version>
-        </dependency>
-
-        <!-- We currently use an old version of metrics to be compatible with the downstream users. We hope to upgrade soon...-->
-        <!--<dependency>-->
-        <!--&lt;!&ndash; license: Apache 2 &ndash;&gt;-->
-        <!--<groupId>com.codahale.metrics</groupId>-->
-        <!--<artifactId>metrics-core</artifactId>-->
-        <!--<version>3.0.1</version>-->
-        <!--</dependency>-->
-        <dependency>
-            <!-- license: Apache 2 -->
-            <groupId>com.yammer.metrics</groupId>
+            <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>2.2.0</version>
+            <version>4.0.3</version>
         </dependency>
 
         <dependency>
@@ -182,7 +167,7 @@
             <!-- license: Apache 2 -->
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -190,7 +175,7 @@
             <!-- license: Apache 2 -->
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.1</version>
+            <version>3.6</version>
             <scope>test</scope>
         </dependency>
 
@@ -198,14 +183,14 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.13</version>
+            <version>1.2.3</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.carrotsearch</groupId>
             <artifactId>junit-benchmarks</artifactId>
-            <version>0.7.1</version>
+            <version>0.7.2</version>
         </dependency>
     </dependencies>
 
